--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.datasource.password=2203
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.sqlScriptEncoding=UTF-8
+# AWS
+aws.access_key_id=qAJrB9ZEKJNbDQJBMFY9
+aws.secret_access_key=x5EIiVJnVMaZ7tuXxDqKX307Wg2GGGe5seb0uf-6
+aws.s3.bucket=agency
+aws.s3.region=us-east-1
