--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 # AWS
-aws.access_key_id=qAJrB9ZEKJNbDQJBMFY9
-aws.secret_access_key=x5EIiVJnVMaZ7tuXxDqKX307Wg2GGGe5seb0uf-6
-aws.s3.bucket=agency
-aws.s3.region=us-east-1
+aws.access_key_id=icImTn1ONpEiYkwfYuvA
+aws.secret_access_key=1P2V5bUYLRizQDNi1bFl8D5zr1blKApIsuTW1ByY
+aws.s3.bucket=okm3agency
+aws.s3.region=ru-central1
