--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=agency
-#spring.datasource.username=postgres
-#spring.datasource.password=2203
-#spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=false
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=agency
+spring.datasource.username=postgres
+spring.datasource.password=2203
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:h2:mem:testdb; DB_CLOSE_DELAY=-1
 #spring.datasource.driver-class-name=org.h2.Driver
