--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ aws.access_key_id=icImTn1ONpEiYkwfYuvA
 aws.secret_access_key=1P2V5bUYLRizQDNi1bFl8D5zr1blKApIsuTW1ByY
 aws.s3.bucket=okm3agency
 aws.s3.region=ru-central1
+
+# JWT
+app.jwtSecret=securityAgency
+app.jwtExpirationMs=86400000
