--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,3 +8,13 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# AWS
+aws.access_key_id=icImTn1ONpEiYkwfYuvA
+aws.secret_access_key=1P2V5bUYLRizQDNi1bFl8D5zr1blKApIsuTW1ByY
+aws.s3.bucket=okm3agency
+aws.s3.region=ru-central1
+
+# JWT
+app.jwtSecret=securityAgency
+app.jwtExpirationMs=86400000
