интеграционные тесты и миграция БД

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=2203
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 # AWS
 aws.access_key_id=icImTn1ONpEiYkwfYuvA
