--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.2.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>7.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
