--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,6 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+spring.flyway.enabled=false
+
 # AWS
 aws.access_key_id=icImTn1ONpEiYkwfYuvA
 aws.secret_access_key=1P2V5bUYLRizQDNi1bFl8D5zr1blKApIsuTW1ByY
