Изменение controller на restController для объектов, js для его функционирования

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ aws.s3.region=ru-central1
 # JWT
 app.jwtSecret=securityAgency
 app.jwtExpirationMs=86400000
+
+#spring.mvc.hiddenmethod.filter.enabled=true
+
+#max size file
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=11MB
+spring.http.multipart.enabled=true
