--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
 			<artifactId>flyway-core</artifactId>
 			<version>7.9.1</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>commons-fileupload</groupId>-->
+<!--			<artifactId>commons-fileupload</artifactId>-->
+<!--			<version>1.3.3</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
