--- a/pom.xml
+++ b/pom.xml
@@ -94,11 +94,6 @@
 			<artifactId>flyway-core</artifactId>
 			<version>7.9.1</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>commons-fileupload</groupId>-->
-<!--			<artifactId>commons-fileupload</artifactId>-->
-<!--			<version>1.3.3</version>-->
-<!--		</dependency>-->
 	</dependencies>
 
 	<build>
@@ -114,13 +109,14 @@
 						</exclude>
 					</excludes>
 				</configuration>
-			</plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>9</source><target>9</target></configuration></plugin>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
-					<source>8</source>
-					<target>8</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
