--- a/agency-server/src/main/resources/application.properties
+++ b/agency-server/src/main/resources/application.properties
@@ -28,3 +28,10 @@ kafka.topic=MoveUsers
 kafka.port.kafka=localhost:9092
 kafka.port.zookeeper=localhost:2181
 spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+#JMS
+spring.artemis.user=admin
+spring.artemis.password=admin
+
+#app.transport=kafkaProducer
+app.transport=jmsProducer
