--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
     <modules>
         <module>agency-server</module>
 		<module>kafka-consumer</module>
-	</modules>
+        <module>artemis-consumer</module>
+        <module>save-log</module>
+    </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -29,6 +31,10 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-artemis</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
