--- a/agency-server/src/test/resources/application-test.properties
+++ b/agency-server/src/test/resources/application-test.properties
@@ -5,6 +5,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=al
 spring.datasource.password=
 
+spring.main.allow-bean-definition-overriding=true
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
