--- a/artemis-consumer/src/main/resources/application.yml
+++ b/artemis-consumer/src/main/resources/application.yml
@@ -1,16 +1,20 @@
 server:
-  port: 2204
+  port: 2205
 
 spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
+jms:
+  artemis:
+    user: admin
+    password: admin
+    broker-url: tcp://localhost:61616
+
 #kafka
 kafka:
-  topic: MoveUsers
   topic-save: SaveLog
   group-id: Logger
   port:
     kafka: localhost:9092
     zookeeper: localhost:2181
-
