--- a/agency-server/src/main/resources/application.properties
+++ b/agency-server/src/main/resources/application.properties
@@ -30,6 +30,7 @@ kafka.port.zookeeper=localhost:2181
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 
 #JMS
+spring.artemis.broker-url=tcp://localhost:61616
 spring.artemis.user=admin
 spring.artemis.password=admin
 
