--- a/agency-server/src/main/resources/application.properties
+++ b/agency-server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=2203
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 # AWS
 aws.access_key_id=icImTn1ONpEiYkwfYuvA
